package(default_visibility = ["//visibility:public"])

cc_library(
  name = "leveldb",
  srcs = glob(
    ["**/*.cc"],
    exclude = [
      "doc/**",
      "**/*_test.cc",
      "db/leveldbutil.cc",
      "db/db_bench.cc",
      "learn/*.cc",
      "util/env_windows.cc",
      "benchmarks/*",
    ],
  ),
  hdrs = glob(
    ["**/*.h"],
    exclude = ["doc/**"],
  ),
  includes = ["include"],
  copts = [
    '-DLEVELDB_HAS_PORT_CONFIG_H',
    '-DLEVELDB_PLATFORM_POSIX',
  ],
  deps = [':init'],
)

cc_library(
  name = 'init',
  hdrs = [],
  deps = [':google'],
)

cc_library(
  name = 'google',
  hdrs = [],
  deps = [
    '@com_google_glog//:glog',
    '@com_github_gflags_gflags//:gflags',
    '@com_google_gtest//:gtest',
  ],
)

cc_library(
  name = 'gtest',
  hdrs = [],
  deps = ['@com_google_gtest//:gtest_main'],
)

