package(default_visibility = ["//visibility:public"])

cc_library(
  name = "leveldb",
  srcs = glob(
    ["**/*.cc"],
    exclude = [
      "doc/**",
      "**/*_test.cc",
      "db/leveldbutil.cc",
      "db/db_bench.cc",
      "learn/*.cc",
      "util/env_windows.cc",
      "benchmarks/*",
    ],
  ),
  hdrs = glob(
    ["**/*.h"],
    exclude = ["doc/**"],
  ),
  includes = ["include"],
  deps = [':init'],
)

[cc_test(
    name = src.replace("/", "_").replace(".cc", ""),
    srcs = [src],
    deps = [
        ":leveldb",
        ":gtest",
        '@com_google_benchmark//:benchmark_main',
    ],
) for src in glob(
    ["**/*_test.cc"],
    exclude = [
      'util/env_windows_test.cc',
    ],
)]

cc_library(
  name = 'init',
  hdrs = [],
  deps = [':google'],
)

cc_library(
  name = 'google',
  hdrs = [],
  deps = [
    '@com_google_glog//:glog',
    '@com_github_gflags_gflags//:gflags',
    '@com_google_gtest//:gtest',
  ],
)

cc_library(
  name = 'gtest',
  hdrs = [],
  deps = ['@com_google_gtest//:gtest_main'],
)

